2004-10-13  Kazuhiko  <kazuhiko@fdiary.net>
	* category.rb: more revise for mod_ruby. add 'title' attribute in
	categor_icon_sample. correct icon url in category_anchor

2004-10-12  Kazuhiko  <kazuhiko@fdiary.net>
	* category.rb: revise for mod_ruby

2004-10-03 Junichiro Kita <kita@kitaj.no-ip.com>
	* amazon.rb: add new option, @conf['amazon.over18']

2004-10-01  Masao Mutoh  <mutoh@highway.ne.jp>
	* counter.rb: Support @options["bot"]

2004-09-30  Masao Mutoh  <mutoh@highway.ne.jp>
	* a.rb: improve HTML

2004-09-26  Masao Mutoh  <mutoh@highway.ne.jp>
	* a.rb: Support config menu.
	* en/a.rb: Added.
	* a/: Removed.

2004-09-15  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
	* ja/disp_referrer.rb : add some search engines.

2004-08-13 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: cut tail of entity reference. thanks IKEDA and snak.

2004-08-10 zunda <zunda at freeshell.org>
	* weather.rb, */weather.rb: show_robot enables to hide weather from robots

2004-08-09 NT <nt@be.to>
	* tlink.rb: fix typo.

2004-08-08 Junichiro Kita <kita@kitaj.no-ip.com>
	* category.rb: fix bug in category_anchor.

2004-08-07 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: watch changing subtitle.
	* makerss.rb: delete entity references in description.
	* makerss.rb: fix wrong TSUKKOMI id with TrackBacks.
	* trackback/tb.rb: fix security hole of TrackBack spam by JavaScript.
	* image.rb: fix thumbnail specify bug on secure mode.

2004-07-30 zunda <zunda at freeshell.org>
	* ja/referer_scheme.rb: better regexp, thanks to Nishiyama-san
	<zn at mbf.nifty.com>

2004-07-27 zunda <zunda at freeshell.org>
	* ja/referer_scheme.rb: HatenaHost remended, thanks to Kakutani-san
	<shintaro at kakutani.com>.

2004-07-19 Junichiro Kita <kita@kitaj.no-ip.com>
	* makelirs.rb: fix errors when user agent is mobile.

2004-07-07 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: some HTML tags escaped in description and content:encoded.

2004-07-06 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: add description elements to items.
